# price-action-analysis

./: .gitignore  README.md  app.py  loader.py  pyproject.toml  requirements.txt  setup.py
data/: Agricultural_Inputs.csv  Apparel_Manufacturing.csv  combined.parquet  price_action_analysis.xlsx
data/industry-specific-stocks/: Advertising_Agencies.csv  Aerospace_&_Defense.csv  Airlines.csv  Airports_&_Air_Services.csv  Asset_Management.csv  Auto_Manufacturers.csv  Banks_-_Regional.csv  Beverages_-_Brewers.csv  Beverages_-_Non-Alcoholic.csv  Beverages_-_Wineries_&_Distilleries.csv  Biotechnology.csv  Broadcasting.csv  Building_Materials.csv  Building_Products_&_Equipment.csv  Business_Equipment_&_Supplies.csv  Capital_Markets.csv  Chemicals.csv  Communication_Equipment.csv  Computer_Hardware.csv  Confectioners.csv  Conglomerates.csv  Consulting_Services.csv  Consumer_Electronics.csv  Copper.csv  Credit_Services.csv  Department_Stores.csv  Diagnostics_&_Research.csv  Discount_Stores.csv  Drug_Manufacturers_-_General.csv  Drug_Manufacturers_-_Specialty_&_Generic.csv  Education_&_Training_Services.csv  Electrical_Equipment_&_Parts.csv  Electronic_Components.csv  Electronic_Gaming_&_Multimedia.csv  Electronics_&_Computer_Distribution.csv  Engineering_&_Construction.csv  Entertainment.csv  Farm_&_Heavy_Construction_Machinery.csv  Farm_Products.csv  Financial_Conglomerates.csv  (+77 more)
data/stocks/: Aluminum.csv  Apparel_Retail.csv  Auto_&_Truck_Dealerships.csv  Auto_Parts.csv
src/: constants.py  loader.py  main.ipynb  plots.py
utils/: loader.py
